k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-devops-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tp-devops
  template:
    metadata:
      labels:
        app: tp-devops
    spec:
      containers:
      - name: tp-devops-container
        # IMPORTANT : L'image que votre pipeline Jenkins a poussée sur Docker Hub
        image: anasselhadi850/tp-devops:latest
        ports:
        - containerPort: 8080 # Le port interne de votre application Spring Boot
