k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tp-devops-service
spec:
  selector:
    app: tp-devops # Cible les pods avec ce label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
